--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -7,5 +7,5 @@ header.header
       li.header__list-item
         a.header__registration(href='./sign-up') Регистрация
       li.header__list-item
-        a.header__enter(href='#') Вход с паролем
+        a.header__enter(href='./login') Вход с паролем
   a.header__search.button.button--search(href='#' aria-label='поиск по сайту')
