--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -1,11 +1,11 @@
 header.header
-  a.header__logo.logo(href='./')
-    img.logo__image(src='img/icons/logo-image-only.svg' alt='логотип Тайпотеки')
+  a.header__logo.logo(href='/')
+    img.logo__image(src='/img/icons/logo-image-only.svg' alt='Логотип Тайпотеки')
     span.logo__name Типотека
   nav.header__nav
     ul.header__nav-list
       li.header__list-item
-        a.header__registration(href='./sign-up') Регистрация
+        a.header__registration(href='/sign-up') Регистрация
       li.header__list-item
-        a.header__enter(href='./login') Вход с паролем
-  a.header__search.button.button--search(href='./search' aria-label='поиск по сайту')
+        a.header__enter(href='/login') Вход с паролем
+  a.header__search.button.button--search(href='/search' aria-label='Поиск по сайту')
