--- a/src/express/templates/main/search.pug
+++ b/src/express/templates/main/search.pug
@@ -8,7 +8,7 @@ block content
         .search.search-page__form
           form(action='#' method='get')
             label
-              input(type='text' placeholder='Что ищем?')
+              input(type='text' name='search' placeholder='Что ищем?')
             button.search__button.button.button--transparent(type='submit').
               Найти
 
