--- a/src/express/templates/articles/new-post.pug
+++ b/src/express/templates/articles/new-post.pug
@@ -2,42 +2,40 @@ extends ../layout.pug
 
 block content
   main
-    section.modal.modal--flex
-      .popup.popup--new-publication.popup--flex
+    section
+      .popup.popup--new-publication.popup--anti
         .new-publication
-          .new-publication__header
-            h1 Новая публикация
-            .new-publication__date-form
-              h3 Дата публикации
-              form(action='#' method='POST')
-                .new-publication__date-block
-                  label(for='new-publication-date' aria-label='Календарь')
-                  input#new-publication-date(type='text' name='login' placeholder='21.03.2019')
-            button.new-publication__button.button.button--colored(type='submit').
-              Опубликовать
-
-          button.popup__button.button.button--popup-close(type='button' aria-label='Закрыть окно').
-            Закрыть окно
-
-          .new-publication__form.form
-            form(action='#' method='get')
+          form(action='#' method='POST')
+            .new-publication__header
+              h1 Новая публикация
+              .new-publication__date-form
+                h3 Дата публикации
+                .new-publication__date-form-division
+                  .new-publication__date-block
+                    label(for='new-publication-date' aria-label='Календарь')
+                    input#new-publication-date(type='text' name='date' placeholder='2019-03-21')
+              button.new-publication__button.button.button--colored(type='submit') Опубликовать
+            a.popup__button.button.button--popup-close(aria-label='Закрыть окно')
+              | Закрыть
+              | окно
+            .new-publication__form.form
               .form__wrapper.form__wrapper--intro
                 .form__field
                   label
-                    input(type='text' placeholder='Заголовок' required)
+                    input(type='text' name='title' placeholder='Заголовок' required='')
                 .form__field.form__field--post-image
                   label
-                    input#image-name-field(type='text' placeholder='Фотография' readonly)
+                    input#image-name-field(type='text' name='photo' placeholder='Фотография' readonly='')
                   .form__image-loader.form__image-loader--publication
                     label
-                      input.visually-hidden(type='file')
+                      input.visually-hidden(type='file' name='upload')
                       | Обзор
-                a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
+                .new-publication__category-wrapper
+                  a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='1' placeholder='Анонс публикации')
+                    textarea(rows='5' name='announcement' placeholder='Анонс публикации')
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='1' placeholder='Полный текст публикации')
-      .modal__overlay
+                    textarea(rows='10' name='full-text' placeholder='Полный текст публикации')
