--- a/src/express/templates/articles/post.pug
+++ b/src/express/templates/articles/post.pug
@@ -95,7 +95,7 @@ block content
               .comments__avatar.avatar
                 img(src='/img/avatar-2.png' alt='аватар пользователя')
               label
-                textarea(rows='1' placeholder='Присоединиться к обсуждению')
+                textarea(name="message" rows='1' placeholder='Присоединиться к обсуждению')
               button.comments__button.button.button--colored(type='submit').
 
                 Опубликовать
