--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -91,7 +91,7 @@ block content
             if article.picture
               .preview__background
                 img.preview__background-image(src=`img/${article.picture}` width='460' height='240' alt=`${article.title}`)
-            time.preview__time(datetime='2019-03-21T20:33') #{article.createdDate}
+            time.preview__time(datetime=`${createdDate}`) #{article.createdDate}
             h3.preview__name
               a.preview__name-link(href='#') #{article.title}
             p.preview__text #{article.announce}
