--- a/src/express/templates/articles/edit.pug
+++ b/src/express/templates/articles/edit.pug
@@ -13,7 +13,7 @@ block content
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date' aria-label='Календарь')
-                    input#new-publication-date(type='text' name='date' placeholder='2019-03-21')
+                    input#new-publication-date(type='text' name='date' placeholder=article.createdDate)
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
             a.popup__button.button.button--popup-close(aria-label='Закрыть окно')
               | Закрыть
@@ -22,27 +22,27 @@ block content
               .form__wrapper.form__wrapper--intro
                 .form__field
                   label
-                    input(type='text' name='title' placeholder='Заголовок' value='Как правильно заводить машину' required='')
+                    input(type='text' name='title' placeholder='Заголовок' value=article.title required='')
                 .form__field.form__field--post-image
                   label
-                    input#image-name-field(type='text' name='photo' value='moya_mashinka.jpg' placeholder='Фотография' readonly='')
+                    input#image-name-field(type='text' name='photo' value=article.picture placeholder=`${article.picture || 'Фотография'}` readonly='')
                   .form__image-loader.form__image-loader--publication
                     label
                       input.visually-hidden(type='file' name='upload')
                       | Обзор
                   button.button.button--transparent Удалить
                 .new-publication__category-wrapper
-                  .new-publication__checkbox.new-publication__checkbox--auto
-                    input#checkbox-auto(type='checkbox' name='category-1')
-                    label(for='checkbox-auto') Автомобили
+                  each category, i in categories
+                    .new-publication__checkbox.new-publication__checkbox--auto
+                      input(type='checkbox' name=`category-${i}` id=`checkbox-${category}` checked=article.category.includes(category))
+                      label(for=`category-${i}`) #{category}
                   a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
                     textarea(rows='5' name='announcement' placeholder='Анонс публикации')
-                      | Материнский холдинг возглавит гендиректор Google Сундар Пичаи. При этом больше половины голосов в компании останется у Пейджа и Брина.
+                      | #{article.announce}
                 .form__field.form__field--publication-text
                   label
                     textarea(rows='10' name='full-text' placeholder='Полный текст публикации')
-                      | Основатели Google Ларри Пейдж и Сергей Брин отойдут от руководства материнским холдингом Alphabet, сказано в сообщении компании. Пейдж занимал пост гендиректора, а Брин — президента Alphabet.
-                      | Alphabet возглавит гендиректор Google Сундар Пичаи, он также продолжит руководить Google. Должность президента холдинга будет упразднена.
+                      | #{article.fullText}
