--- a/src/express/templates/my/my.pug
+++ b/src/express/templates/my/my.pug
@@ -8,6 +8,6 @@ block content
         each article in articles
           li.notes__list-item
             time.notes__item-time(datetime=`${createdDate}`) #{article.createdDate}
-            a.notes__item-text(href='#') #{article.announce}
+            a.notes__item-text(href=`/articles/${article.id}`) #{article.announce}
             button.notes__button.button.button--close-item(type='button')
               span.visually-hidden Закрыть строку списка
