--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -85,9 +85,10 @@ block content
         each article in articles
           li(class={'preview__item': true, 'preview__item--noimage': article.picture === undefined})
             ul.preview__breadcrumbs
-              each category in article.category
+              each category in article.categories
                 li.preview__breadcrumbs-item
-                  a.preview__breadcrumbs-link(href='#') #{category}
+                  a.preview__breadcrumbs-link(href='#') #{category.name}
+            
             if article.picture
               .preview__background
                 img.preview__background-image(src=`img/${article.picture}` width='460' height='240' alt=`${article.title}`)
@@ -98,7 +99,7 @@ block content
               a.preview__comment(href='#')
                 | Комментарии
                 span.preview__cloud
-                b.preview__comment-count #{article.comments.length}
+                b.preview__comment-count #{article.comments && article.comments.length}
 
     .preview__toggle-wrapper
       ul.preview__pagination.pagination
