--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -11,10 +11,12 @@ html(lang='ru')
     link(rel='preload' href='/fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
     link(rel='stylesheet' href='/css/style.min.css')
   body
-    .wrapper
-      include partials/header.pug
-      block content
-      include partials/footer.pug
+    include ./mixins/index.pug
 
-      script(src='/js/vendor.js')
-      script(src='/js/main.js')
+    .wrapper
+      include ./partials/header.pug
+      block content
+      include ./partials/footer.pug
+
+    script(src='/js/vendor.js')
+    script(src='/js/main.js')
