--- a/src/express/templates/main/search.pug
+++ b/src/express/templates/main/search.pug
@@ -11,10 +11,13 @@ block content
             label
               input(type='text' name='search' value=search || '' placeholder='Что ищем?' autofocus)
             button.search__button.button.button--transparent(type='submit') Найти
+          
           if result.length > 0
             each article in result
               .search__result
-                time.search__date(datetime=`${article.createdDate}`) #{article.createdDate}
+                time.search__date(datetime=article.createdAt)
+                  +formatDate(article.createdAt)
                 a.search__link(href=`/articles/${article.id}`) #{article.title}
+          
           if notFound
             p.search-page__empty Ничего не нашлось
