--- a/src/express/templates/my/comments.pug
+++ b/src/express/templates/my/comments.pug
@@ -4,15 +4,18 @@ block content
   main.main-page.main-page--padding
     section.main-page__publication.publication
       h1.publication__title Комментарии
-      ul.publication__list
-        each article in articles
-          each comment in article.comments
-            li.publication__list-item
-              .publication__header
-                img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
-                b.publication__list-name Александр Петров
-                time.publication__item-time(datetime=`${article.createdDate}`) #{article.createdDate}
-              a.publication__item-text(href='#') #{article.title}
-              p.publication__text-strong #{comment.text}
-              button.publication__button.button.button--close-item(type='button')
-                span.visually-hidden Закрыть строку списка
+
+      if (articles)
+        ul.publication__list
+          each article in articles
+            each comment in article.comments
+              li.publication__list-item
+                .publication__header
+                  img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+                  b.publication__list-name Александр Петров
+                  time.publication__item-time(datetime=article.createdAt)
+                    +formatDate(article.createdAt)
+                a.publication__item-text(href='#') #{article.title}
+                p.publication__text-strong #{comment.text}
+                button.publication__button.button.button--close-item(type='button')
+                  span.visually-hidden Закрыть строку списка
