--- a/src/express/templates/my/my.pug
+++ b/src/express/templates/my/my.pug
@@ -4,10 +4,13 @@ block content
   main.main-page.main-page--padding
     section.main-page__notes.notes
       h1.notes__title Мои записи
-      ul.notes__list
-        each article in articles
-          li.notes__list-item
-            time.notes__item-time(datetime=`${createdDate}`) #{article.createdDate}
-            a.notes__item-text(href=`/articles/${article.id}`) #{article.announce}
-            button.notes__button.button.button--close-item(type='button')
-              span.visually-hidden Закрыть строку списка
+
+      if (articles)
+        ul.notes__list
+          each article in articles
+            li.notes__list-item
+              time.notes__item-time(datetime=`${createdAt}`)
+                +formatDate(article.createdAt)
+              a.notes__item-text(href=`/articles/${article.id}`) #{article.title}
+              button.notes__button.button.button--close-item(type='button')
+                span.visually-hidden Закрыть строку списка
