--- a/src/express/templates/articles/article.pug
+++ b/src/express/templates/articles/article.pug
@@ -41,11 +41,15 @@ block content
                     p.comments__message #{comment.text}
 
           .comments__footer.comments__footer--user
-            form(action='#' method='POST')
+            form(
+              action=`/articles/${article.id}/comments`
+              method='POST'
+              //- enctype='application/x-www-form-urlencoded'
+              autocomplete='off'
+            )
               .comments__avatar.avatar
                 img(src='/img/avatar-2.png' alt='аватар пользователя')
               label
-                textarea(name="message" rows='1' placeholder='Присоединиться к обсуждению')
+                textarea(name='text' rows='1' placeholder='Присоединиться к обсуждению') 
               button.comments__button.button.button--colored(type='submit').
                 Опубликовать
-
