--- a/src/express/templates/articles/add.pug
+++ b/src/express/templates/articles/add.pug
@@ -14,16 +14,21 @@ block content
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date' aria-label='Календарь')
+                    -
+                      const createdAt =
+                        (article && article.createdAt)
+                          ? article.createdAt
+                          : new Date().toISOString();
                     input#new-publication-date(
                       type='text'
-                      name='date'
-                      value=article ? article.createdDate : date
-                      placeholder=article ? article.createdDate : date)
+                      name='createdAt'
+                      value=createdAt)
                       
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
             a.popup__button.button.button--popup-close(aria-label='Закрыть окно')
               | Закрыть
               | окно
+
             .new-publication__form.form
               .form__wrapper.form__wrapper--intro
                 .form__field
@@ -38,10 +43,15 @@ block content
 
                 .form__field.form__field--post-image
                   label
+                    -
+                      const picture =
+                        (article && article.picture && article.picture !== 'null')
+                        ? article.picture
+                        : '';
                     input#image-name-field(
                       type='text'
-                      name='photo'
-                      value=article ? article.picture : ''
+                      name='picture'
+                      value=picture
                       placeholder='Фотография'
                       readonly)
                   .form__image-loader.form__image-loader--publication
@@ -50,13 +60,21 @@ block content
                       | Обзор
 
                 .new-publication__category-wrapper
+                  -
+                    const articleCategories =
+                      (article && article.categories)
+                        ? article.categories.filter(item => item !== 'undefined')
+                        : [];
                   each category, i in categories
                     .new-publication__checkbox.new-publication__checkbox--auto
+                      - const categoryId = category.id.toString();
+                      - const checked = articleCategories.includes(categoryId);
                       input(
                           type='checkbox'
                           name=`category-${i}`
-                          id=`checkbox-${i}`
-                          checked=article && article.category.includes(category))
+                          id=`category-${i}`
+                          checked=checked
+                        )
                       label(for=`category-${i}`) #{category.name}
                   a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
 
@@ -67,5 +85,5 @@ block content
                       | #{article ? article.announce : ''}
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='10' name='fullText' placeholder='Полный текст публикации')
-                      | #{article ? article.fullText : ''}
+                    textarea(rows='10' name='description' placeholder='Полный текст публикации')
+                      | #{article ? article.description : ''}
