--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -10,6 +10,16 @@ html(lang='ru')
     link(rel='preload' href='/fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
     link(rel='preload' href='/fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
     link(rel='stylesheet' href='/css/style.min.css')
+    style.
+      .server-error {
+        margin: 20px 0;
+        padding: 10px;
+
+        border-radius: 10px;
+        background-color: tomato;
+
+        color: white;
+      }
   body
     include ./mixins/index.pug
 
