--- a/src/express/templates/articles/article.pug
+++ b/src/express/templates/articles/article.pug
@@ -50,6 +50,11 @@ block content
               .comments__avatar.avatar
                 img(src='/img/avatar-2.png' alt='аватар пользователя')
               label
-                textarea(name='text' rows='1' placeholder='Присоединиться к обсуждению')
+                textarea(
+                  name='text'
+                  rows='1'
+                  placeholder='Присоединиться к обсуждению'
+                ) #{newComment}
               button.comments__button.button.button--colored(type='submit').
                 Опубликовать
+              +insertErrorMessages(validationMessages)
