--- a/src/express/templates/articles/article.pug
+++ b/src/express/templates/articles/article.pug
@@ -36,13 +36,15 @@ block content
           if (article.comments)
             ul.comments__list
               each comment in article.comments
-                li.comments__comment
+                li.comments__comment(
+                  id=comment.id
+                )
                   .comments__avatar.avatar
                     img(src='/img/avatar-1.png' alt='аватар пользователя')
                   .comments__text
                     .comments__head
                       p Евгений Петров •
-                      time.comments__date(datetime='2019-03-21T20:33')
+                      time.comments__date(datetime=comment.createdAt)
                         +formatDate(comment.createdAt)
                     p.comments__message #{comment.text}
 
