--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -5,7 +5,7 @@ header.header
   nav.header__nav
     ul.header__nav-list
       li.header__list-item
-        a.header__registration(href='/sign-up') Регистрация
+        a.header__registration(href='/register') Регистрация
       li.header__list-item
         a.header__enter(href='/login') Вход с паролем
   a.header__search.button.button--search(href='/search' aria-label='Поиск по сайту')
