--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -9,14 +9,18 @@ block content
         | Закрыть
         | окно
       h2.popup__title Войти
-      .popup__form.form.form--log-in
-        form(action='#' method='get')
-          .form__field
-            label
-              input(type='email' name='email' placeholder='Электронная почта' required='')
-          .form__field
-            label
-              input(type='password' name='password' placeholder='Пароль' required='')
-          p.form__error-message Некоторая ошибка произошла, беда!
-          button.form__submit-btn.form__submit-btn--log-in.button.button--colored(type='submit') Войти
 
+      .popup__form.form.form--log-in
+        form(action='/login' method='POST')
+          .form__field
+            label
+              input(type='email' name='email' value=email placeholder='Электронная почта' required)
+          .form__field
+            label
+              input(type='password' name='password' value=password placeholder='Пароль' required)
+
+          if validationMessages
+            each message in validationMessages
+              p.form__error-message #{message}
+
+          button.form__submit-btn.form__submit-btn--log-in.button.button--colored(type='submit') Войти
