--- a/src/express/templates/main/register.pug
+++ b/src/express/templates/main/register.pug
@@ -38,7 +38,7 @@ block content
           a.form__avatar.avatar
             img(src='img/icons/smile.svg' alt='аватар пользователя')
           label
-            input.visually-hidden(type='file' name='upload')
+            input.visually-hidden(type='file' name='avatar' required)
             | Загрузить фото профиля
 
         button.form__submit-btn.form__submit-btn--register.button.button--colored(type='submit') Зарегистрироваться
