--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -1,11 +1,35 @@
-header.header
+header(class={header: true, 'header--logged': user})
   a.header__logo.logo(href='/')
     img.logo__image(src='/img/icons/logo-image-only.svg' alt='Логотип Тайпотеки')
     span.logo__name Типотека
-  nav.header__nav
-    ul.header__nav-list
-      li.header__list-item
-        a.header__registration(href='/register') Регистрация
-      li.header__list-item
-        a.header__enter(href='/login') Вход с паролем
+
+  if user
+    a.button.button--colored.header__button-new(href='/articles/add') Новая запись
+    .header__dropdown
+      button.button.button--burger.header__burger(href='#') Открыть меню
+      ul.navigation.header__navigation
+        li.navigation__item
+          a(href="/my") Публикации
+        li.navigation__item
+          a(href="/my/comments") Комментарии
+        li.navigation__item
+          a(href="/categories") Категории
+        li.navigation__item
+          a(href="/logout") Выход
+    nav.header__nav
+      ul.header__nav-list
+        li.header__list-item
+          p #{user.name} #{user.surname}
+        li.header__list-item
+          a.header__exit(href='/logout') Выйти
+    a.header__avatar.avatar
+      img(src=`/img/${user.avatar}` alt="Аватар пользователя")
+  else
+    nav.header__nav
+      ul.header__nav-list
+        li.header__list-item
+          a.header__registration(href='/register' ) Регистрация
+        li.header__list-item
+          a.header__enter(href='/login') Вход с паролем
+
   a.header__search.button.button--search(href='/search' aria-label='Поиск по сайту')
