--- a/src/express/templates/partials/footer.pug
+++ b/src/express/templates/partials/footer.pug
@@ -2,4 +2,4 @@ footer.footer
   a.footer__copyright(href='https://htmlacademy.ru/' aria-label='HTMLAcademy')
     img(src='/img/icons/HTMLAcademyLogo.svg' width='112' height='50' alt='HTMLAcademy')
   span.footer__dot
-  p.footer__text Типотека, 2020—2021
+  p.footer__text Типотека, 2020−2022
