--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -15,13 +15,32 @@ block content
           input(type="hidden" name="_csrf" value=csrfToken)
           .form__field
             label
-              input(type='email' name='email' value=email placeholder='Электронная почта' required)
+              input(
+                type='email'
+                name='email'
+                value=email
+                placeholder='Электронная почта'
+                required
+                autofocus)
           .form__field
             label
-              input(type='password' name='password' value=password placeholder='Пароль' required)
+              input(
+                type='password'
+                name='password'
+                value=password
+                placeholder='Пароль'
+                required)
 
           if validationMessages
             each message in validationMessages
               p.form__error-message #{message}
 
-          button.form__submit-btn.form__submit-btn--log-in.button.button--colored(type='submit') Войти
+          button(
+            class={
+              'form__submit-btn': true,
+              'form__submit-btn--log-in': true,
+              'button': true,
+              'button--colored': true
+            }
+            type='submit'
+          ) Войти
