--- a/src/express/templates/my/my.pug
+++ b/src/express/templates/my/my.pug
@@ -2,10 +2,9 @@ extends ../layout.pug
 
 block content
   main.main-page.main-page--padding
-    section.main-page__notes.notes
-      h1.notes__title Мои записи
-
-      if (articles)
+    if (articles.length)
+      section.main-page__notes.notes
+        h1.notes__title Мои записи
         ul.notes__list
           each article in articles
             li.notes__list-item
@@ -14,3 +13,7 @@ block content
               a.notes__item-text(href=`/articles/${article.id}`) #{article.title}
               button.notes__button.button.button--close-item(type='button')
                 span.visually-hidden Закрыть строку списка
+    else
+      h1.notes__title Мои записи
+      div.main-page__empty-wrapper
+        p.main-page__empty-text Здесь пока пусто!
