--- a/src/express/templates/my/my.pug
+++ b/src/express/templates/my/my.pug
@@ -2,9 +2,11 @@ extends ../layout.pug
 
 block content
   main.main-page.main-page--padding
+    - const TITLE = 'Мои записи';
+
     if (articles.length)
       section.main-page__notes.notes
-        h1.notes__title Мои записи
+        h1.notes__title #{TITLE}
         ul.notes__list
           each article in articles
             li.notes__list-item
@@ -14,6 +16,6 @@ block content
               button.notes__button.button.button--close-item(type='button')
                 span.visually-hidden Закрыть строку списка
     else
-      h1.notes__title Мои записи
+      h1.notes__title #{TITLE}
       div.main-page__empty-wrapper
         p.main-page__empty-text Здесь пока пусто!
