--- a/src/express/templates/my/comments.pug
+++ b/src/express/templates/my/comments.pug
@@ -15,9 +15,12 @@ block content
               li.publication__list-item
                 .publication__header
                   - const author = comment.users;
-                  - const authorAvatar = author.avatar || 'avatar-1.png';
-                  img.publication__list-image(
-                    src=`/img/${authorAvatar}` width='20' height='20' alt='Аватар пользователя'
+                  -
+                    const authorAvatarPath = author && author.avatar
+                      ? `/img/${author.avatar}`
+                      : '';
+                  img.avatar.publication__list-image(
+                    src=authorAvatarPath width='20' height='20' alt='Аватар пользователя'
                   )
                   b.publication__list-name #{author.name} #{author.surname}
                   time.publication__item-time(datetime=article.createdAt)
