--- a/src/express/templates/mixins/format-date.pug
+++ b/src/express/templates/mixins/format-date.pug
@@ -1,6 +1,10 @@
 mixin formatDate(dateString)
   - const date = new Date(dateString);
-  - const day = date.toLocaleString('en-US', {day: 'numeric'});
+  - const dayUnformatted = date.toLocaleString('en-US', {day: 'numeric'});
+  -
+    const day = dayUnformatted.length > 1
+      ? dayUnformatted
+      : `0${dayUnformatted}`;
   - const month = date.toLocaleString('en-US', {month: '2-digit'});
   - const year = date.toLocaleString('en-US', {year: 'numeric'});
   - const time = date.toLocaleTimeString('en-US', {hour12: false, timeStyle: 'short'});
