--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -68,10 +68,12 @@ block content
                 a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
 
               p.preview__text #{article.announce}
-                a.preview__comment(href='#')
-                  | Комментарии
-                  span.preview__cloud
-                  b.preview__comment-count #{article.comments && article.comments.length}
+
+              a.preview__comment(href=`/articles/${article.id}/#comments`)
+                span.preview__cloud
+                |  Комментарии
+                - const commentCount = article.comments && article.comments.length;
+                b.preview__comment-count  (#{commentCount})
       
       .preview__toggle-wrapper
         +pagination(page, totalPages, 2, `?`, 'preview__pagination')
