--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -55,25 +55,8 @@ block content
         h2.visually-hidden Список превью статей
         ul.preview__list
           each article in articles
-            li(class={'preview__item': true, 'preview__item--noimage': article.picture === undefined})
-              include ../partials/article-breadcrumbs.pug
-              
-              if article.picture
-                .preview__background
-                  img.preview__background-image(src=`img/${article.picture}` width='460' height='240' alt=`${article.title}`)
-              time.preview__time(datetime=createdAt)
-                +formatDate(article.createdAt)
-
-              h3.preview__name
-                a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
-
-              p.preview__text #{article.announce}
-
-              a.preview__comment(href=`/articles/${article.id}/#comments`)
-                span.preview__cloud
-                |  Комментарии
-                - const commentCount = article.comments && article.comments.length;
-                b.preview__comment-count  (#{commentCount})
+            li(class={'preview__item': true, 'preview__item--noimage': !article.picture})
+              include ../partials/article-card.pug
       
       .preview__toggle-wrapper
         +pagination(page, totalPages, 2, `?`, 'preview__pagination')
