--- a/src/express/templates/articles/add.pug
+++ b/src/express/templates/articles/add.pug
@@ -89,7 +89,7 @@ block content
                           checked=checked
                         )
                       label(for=`category-${categoryId}`) #{category.name}
-                  a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
+                  a.new-publication__form-link.button.button--transparent(href='/categories/') Добавить категорию
 
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
