--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -9,51 +9,8 @@ block content
     include ../partials/categories.pug
 
     .main-page__section-flex
-      section.main-page__hot.hot
-        h2.hot__name
-          | Самое обсуждаемое 
-          span.hot__icon.hot__icon--fire
-        ul.hot__list
-          li.hot__list-item
-            a.hot__list-link(href='#')
-              | Билл Гейтс впервые за два года возглавил рейтинг самых богатых людей мира по версии Bloomberg
-              sup.hot__link-sup 12
-          li.hot__list-item
-            a.hot__list-link(href='#')
-              | Сервис для аналитики Telegram-чатов Combot попал под блокировку из-за информации на служебной
-              sup.hot__link-sup 15
-              |  странице
-          li.hot__list-item.hot__list-item--margin
-            a.hot__list-link(href='#')
-              | Модель Кайли Дженнер продаст 51% своей компании Kylie Cosmetics владельцу Factor за $600 млн
-              sup.hot__link-sup 52
-          li.hot__list-item.hot__list-item--end
-            a.hot__list-link(href='#')
-              | Tesla получила 146 тысяч предзаказов на электрический пикап Cybertruck за двое суток
-              sup.hot__link-sup 153
-
-      section.main-page__last.last
-        h2.last__name
-          | Последние комментарии 
-          span.last__icon.last__icon--cloud
-        ul.last__list
-          each comment in lastComments
-            li.last__list-item
-              -
-                const user = comment.users;
-                const userAvatarPath = user.avatar
-                  ? `/img/${user.avatar}`
-                  : '';
-              img.last__list-image.avatar(
-                src=userAvatarPath
-                width='20'
-                height='20'
-                alt='Аватар пользователя'
-              )
-              b.last__list-name #{user.name} #{user.surname}
-              a.last__list-link(
-                href=`/articles/${comment.articleId}#${comment.id}`
-              ) #{comment.text}
+      include ../partials/hot-articles.pug
+      include ../partials/last-comments.pug
     
     if (articles)
       section.main-page__list.preview
