--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -14,7 +14,7 @@ header(class={header: true, 'header--logged': user})
           li.navigation__item
             a(href="/my/comments") Комментарии
           li.navigation__item
-            a(href="/categories") Категории
+            a(href="/my/categories") Категории
     nav.header__nav
       ul.header__nav-list
         li.header__list-item
