--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -9,7 +9,7 @@ block content
     include ../partials/categories.pug
 
     .main-page__section-flex
-      include ../partials/hot-articles.pug
+      include ../partials/popular-articles.pug
       include ../partials/last-comments.pug
     
     if (articles)
